<resources>
    <string name="app_name">GoPost</string>
    <string name="title_activity_login2">LoginActivity2</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="fullname_zecher">Julian Zecher</string>
    <string name="fullname_kammerer">Max Kammerer</string>
    <string name="fullname_gschwendtner">Jakob Gschwendtner</string>
    <string name="fullname_wilfingseder">Lukas Wilfingseder</string>
    <string name="fullnames_wilfingseder_kammerer">Lukas Wilfingseder, Max Kammerer,</string>
    <string name="fullnames_zecher_gschwendtner">Julian Zecher, Jakob Gschwendtner</string>
    <string name="create_post">Create Post</string>
    <string name="create_story">Create Story</string>
    <string name="activity_feed">Activity-feed</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Register</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="profilename">Profilename:</string>
    <string name="unique_name">Unique name</string>
    <string name="display_name">Displayname</string>
    <string name="email">Email:</string>
    <string name="notification_channel_id" translatable="false">GoPostNotifications</string>
    <string name="image_path_intent_key" translatable="false">imageBytesPath</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!-- TODO: Remove or change this placeholder text -->
</resources>